# p2

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/std/error/: trait.Error.js
p2/: all.html  index.html  sidebar-items.js  struct.Histogram.html  struct.Quantile.html
p2/histogram/: struct.Histogram.html
p2/quantile/: Quantile.t.html  struct.Quantile.html
simple_error/: all.html  index.html  macro.bail.html  macro.require_with.html  macro.try_with.html  require_with.m.html  sidebar-items.js  struct.SimpleError.html  type.SimpleResult.html
src/: histogram.rs  lib.rs  quantile.rs
src/p2/: histogram.rs.html  lib.rs.html  quantile.rs.html
src/simple_error/: lib.rs.html
